# src/features/users/domain/password-recovery-domain.dto.ts
@@ -1,0 +1,4 @@
+export type PasswordRecoveryDomainDto = {
+  recoveryCode: string;
+  expiresAt: Date;
+};
